--- a/modules/quality_control/view/pre_qualitycontrol_form.xml
+++ b/modules/quality_control/view/pre_qualitycontrol_form.xml
@@ -2,15 +2,12 @@
 <form>
     <label name="shipment"/>
     <field name="shipment"/>
-    <newline/>
-    <!-- <label name="suppliershipmentno"/>
-    <field name="suppliershipmentno"/> -->
-    <!-- <label name="party"/>
+    <label name="party"/>
     <field name="party"/>
     <label name="material"/>
     <field name="material"/>
     <label name="inwarddate"/>
-    <field name="inwarddate"/> -->
+    <field name="inwarddate"/>
     <field name="critearea" colspan="2" 
     view_ids="quality_control.pre_qualitycontrol_labcritearea_view_tree,quality_control.pre_qualitycontrol_labcritarea_view_form"/>
     <field name="critearea1" colspan="2" 
@@ -18,8 +15,8 @@
     <label name="graph"/>
     <field name="graph"/>
     <newline/>
-    <separator string="" colspan="4" />
-    <separator string="Analysis of rejected material" colspan="4" />
+    <separator string="" id="test" colspan="4"/>
+    <separator string="Analysis of rejected material" id="tests" colspan="4"/>
     <field name="rejected" colspan="2" 
     view_ids="quality_control.pre_qualitycontrol_rejected_view_tree,quality_control.pre_qualitycontrol_rejected_view_form"/>
     <label name="image"/>
