--- a/modules/stock/view/shipment_in_form.xml
+++ b/modules/stock/view/shipment_in_form.xml
@@ -18,6 +18,8 @@ this repository contains the full copyright notices and license terms. -->
     <field name="company"/>
     <label name="warehouse"/>
     <field name="warehouse"/>
+    <label name="weighting"/>
+    <field name="weighting"/>
      <label name="bulk"/>
     <field name="bulk" width="10"  colspan="1"/>
     <group col="-1" colspan="2" id="bulks">
@@ -27,8 +29,8 @@ this repository contains the full copyright notices and license terms. -->
         <field name="gi" xexpand="0" width="25"/>
          <label name="pvc"/>
         <field name="pvc" xexpand="0" width="25"/>
-         <label name="l1000"/>
-        <field name="l1000" xexpand="0" width="25"/>
+         <label name="vehicle_no"/>
+        <field name="vehicle_no" xexpand="0" width="25"/>
         <!-- Add here some checkboxes ! -->
     </group>
     <notebook colspan="6">
