--- a/modules/quality_control/view/work_form_latest.xml
+++ b/modules/quality_control/view/work_form_latest.xml
@@ -1,8 +1,27 @@
 <?xml version="1.0"?>
 <data>
     <xpath expr="/form/field[@name='operation']" position="after">
+    <group id="test_234"  colspan="4">
+    <label name="quantitytaken"/>
+    <field name="quantitytaken" colspan="3"/>
+    <label name="initial_ph"/>
+    <field name="initial_ph"/>
+    <label name="initial_moisture"/>
+    <field name="initial_moisture"/>
+    <label name="final_ph"/>
+    <field name="final_ph"/>
+    <label name="final_moisture"/>
+    <field name="final_moisture"/>
+    </group>
     <field name="treatment_freeparameter" colspan="4" 
-    view_ids="quality_control.treatment_freeparameter_view_tree,quality_control.treatment_freeparameter_view_form"/>
-
+    view_ids="quality_control.treatment_freeparameter_view_tree,quality_control.treatment_freeparameter_view_form"/> 
+    <group id="test_1234" colspan="4">
+    <label name="qty_sulphuric"/>
+    <field name="qty_sulphuric"/>
+    <label name="qty_bht"/>
+    <field name="qty_bht"/>
+    </group>
+    <field name="materialbalance" colspan="4" 
+    view_ids="quality_control.materialbalance_view_tree,quality_control.materialbalance_view_form"/>
     </xpath>
 </data>
