--- a/modules/quality_control/view/work_form_latest.xml
+++ b/modules/quality_control/view/work_form_latest.xml
@@ -23,5 +23,23 @@
     </group>
     <field name="materialbalance" colspan="4" 
     view_ids="quality_control.materialbalance_view_tree,quality_control.materialbalance_view_form"/>
+    <field name="distillation_input" colspan="4" 
+    view_ids="quality_control.fd_inputdetails_view_tree,quality_control.fd_inputdetails_view_form"/>
+    <group id="tet_234" colspan="4">
+    <!-- <separator string="" id="rest" colspan="4"/>
+    <separator string="Analysis of rejected material" id="rests" colspan="4"/> -->
+    <label name="first"/>
+    <field name="first"/>
+    <label name="second"/>
+    <field name="second"/>
+    <label name="third"/>
+    <field name="third"/>
+    <label name="fourth"/>
+    <field name="fourth"/>
+    <label name="fifth"/>
+    <field name="fifth"/>
+    <field name="analysis" colspan="4" 
+    view_ids="quality_control.fd_analysis_view_tree,quality_control.fd_analysis_view_form"/>
+    </group>
     </xpath>
 </data>
