--- a/modules/quality_control/view/work_form_latest.xml
+++ b/modules/quality_control/view/work_form_latest.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0"?>
 <data>
     <xpath expr="/form/field[@name='operation']" position="after">
+    <field name="ww_mb" colspan="4" 
+    view_ids="quality_control.ww_mb_view_tree,quality_control.ww_mb_view_form"/>
+    <field name="stripping" colspan="4" 
+    view_ids="quality_control.stripping_mb_view_tree,quality_control.stripping_mb_view_form"/>
+    <field name="ed_mb" colspan="4" 
+    view_ids="quality_control.ed_mb_view_tree,quality_control.ed_mb_view_form"/> 
     <group id="test_234"  colspan="4">
     <label name="quantitytaken"/>
     <field name="quantitytaken" colspan="3"/>
@@ -40,6 +46,8 @@
     <field name="fifth"/>
     <field name="analysis" colspan="4" 
     view_ids="quality_control.fd_analysis_view_tree,quality_control.fd_analysis_view_form"/>
+    <field name="mb" colspan="4" 
+    view_ids="quality_control.fd_mb_view_tree,quality_control.fd_mb_view_form"/>
     </group>
     </xpath>
 </data>
