--- a/modules/quality_control/view/pre_qualitycontrol_form.xml
+++ b/modules/quality_control/view/pre_qualitycontrol_form.xml
@@ -37,10 +37,17 @@
     <field name="gcgraphno"/>
     <field name="my_deviation_table" colspan="4" 
     view_ids="quality_control.deviation_view_tree,quality_control.deviation_view_form"/>
-    <field name="customer" colspan="4" 
-    view_ids="quality_control.pre_qualitycontrol_customer_view_tree,quality_control.pre_qualitycontrol_customer_view_form"/>
     <label name="remark"/>
     <field name="remark"/>
+    <separator string="Customer Specifications" colspan="6" id="customer_specs"/>
+    <label name="ph1"/>
+    <field name="ph1"/>
+    <label name="moisture1"/>
+    <field name="moisture1"/>
+    <label name="peroxide"/>
+    <field name="peroxide"/>        
+    <label name="purity1"/>
+    <field name="purity1"/>
     <newline/>
     <group col="-1" colspan="2" id="state_buttons">
         <button name="draft"/>
