--- a/modules/quality_control/view/fd_inputdetails_tree.xml
+++ b/modules/quality_control/view/fd_inputdetails_tree.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <tree editable="1">
-    <field name="name"/>
+    <field name="product"/>
     <field name="unit"/>
     <field name="quantity"/>
 </tree>
