--- a/modules/production/view/production_form.xml
+++ b/modules/production/view/production_form.xml
@@ -22,7 +22,7 @@ this repository contains the full copyright notices and license terms. -->
     <field name="uom"/>
     <notebook>
         <page string="Lines" id="lines">
-            <field name="inputs" colspan="2" view_ids="stock.move_view_list_shipment"/>
+            <field name="inputs" colspan="2" view_ids="stock.move_view_list_shipment,quality_control.stock_move_production_form"/>
             <field name="outputs" colspan="2" view_ids="stock.move_view_list_shipment"/>
         </page>
         <page string="Other Info" id="other">
