--- a/modules/quality_control/view/stock_move_production_form.xml
+++ b/modules/quality_control/view/stock_move_production_form.xml
@@ -4,6 +4,11 @@ this repository contains the full copyright notices and license terms. -->
 <form col="4">
     <label name="shipment"/>
     <field name="shipment" />
+    <newline/>
+    <label name="inward_ref"/>
+    <field name="inward_ref" />
+    <label name="moves"/>
+    <field name="moves" />
     <label name="from_location"/>
     <field name="from_location"/>
     <label name="to_location"/>
