--- a/modules/quality_control/view/post_qualitycontrol_form.xml
+++ b/modules/quality_control/view/post_qualitycontrol_form.xml
@@ -7,15 +7,15 @@
     <field name="effective_date"/>
     <field name="analysis_reports" colspan="4" 
     view_ids="quality_control.pre_qualitycontrol_labcritearea_view_tree,quality_control.pre_qualitycontrol_labcritarea_view_form" />
-    <label name="postgraph"/>
-    <field name="postgraph"/>
+    <!-- <label name="postgraph"/>
+    <field name="postgraph"/> -->
     <newline/>
     <separator id="post1" string="" colspan="4" />
     <separator id="post2" string="Analysis of rejected material" colspan="4" />
     <field name="rejecteds" colspan="4" 
     view_ids="quality_control.pre_qualitycontrol_rejected_view_tree,quality_control.pre_qualitycontrol_rejected_view_form"/>
-    <label name="postimage"/>
-    <field name="postimage"/>
+    <!-- <label name="postimage"/>
+    <field name="postimage"/> -->
     <newline/>
     <label name="colour"/>
     <field name="colour"/> 
