--- a/modules/stock/view/shipment_out_form.xml
+++ b/modules/stock/view/shipment_out_form.xml
@@ -43,6 +43,9 @@ this repository contains the full copyright notices and license terms. -->
     <field name="tare_wt"/>
     <label name="net_wt"/>
     <field name="net_wt"/>
+    
+    <label name="time"/>
+    <field name="time"/>
     <notebook colspan="4">
         <page name="inventory_moves">
             <field name="inventory_moves" colspan="4" view_ids="stock.move_view_list_shipment"/>
